syntax = "proto3";
package com.greeting.grpc;

message GreetingRequest{
  string name = 1;
  string lastname = 2;
  int32 age = 3;
}

message GreetingResponse{
  string greeting = 1;
}

service GreetingService{
  rpc greeting(GreetingRequest) returns (GreetingResponse);
}